--- a/app/javascript/dashboard/i18n/locale/en/campaign.json
+++ b/app/javascript/dashboard/i18n/locale/en/campaign.json
@@ -284,6 +284,7 @@
     "EMAIL": {
       "HEADER_TITLE": "Email campaigns",
       "NEW_CAMPAIGN": "Create campaign",
+      "UPDATE_BUTTON_TEXT": "Update",
       "EMPTY_STATE": {
         "TITLE": "No Email campaigns are available",
         "SUBTITLE": "Launch an Email campaign to reach your customers directly. Send offers or make announcements with ease. Click 'Create campaign' to get started."
