API optimizations via State handling for get and create campaigns

--- a/app/javascript/dashboard/i18n/locale/en/campaign.json
+++ b/app/javascript/dashboard/i18n/locale/en/campaign.json
@@ -338,7 +338,8 @@
           },
           "API": {
             "SUCCESS_MESSAGE": "Email campaign created successfully",
-            "ERROR_MESSAGE": "There was an error. Please try again."
+            "ERROR_MESSAGE": "There was an error. Please try again.",
+            "CONTACTS_ERROR": "Please select valid contacts"
           }
         }
       }
