Generalized Report section

--- a/app/javascript/dashboard/i18n/locale/en/report.json
+++ b/app/javascript/dashboard/i18n/locale/en/report.json
@@ -423,13 +423,11 @@
       }
     }
   },
-  "WHATSAPP_REPORTS": {
-    "HEADER": "Whatsapp Reports",
+  "CAMPAIGN_REPORTS": {
+    "HEADER": "Campaign Reports",
     "FILTER_DROPDOWN_LABEL": "Select campaign",
-    "EMPTY_TITLE": "No whatsapp campaign report selected",
-    "EMPTY_SUBTITLE": "Please select a campaign",
-    "REPORT_TITLE": "Campaign name: {title}",
-    "CONTACTS_COUNT":  "Total contacts scheduled: {count} "
+    "EMPTY_TITLE": "No campaign report selected",
+    "EMPTY_SUBTITLE": "Please select a campaign"
   },
   "BOT_REPORTS": {
     "HEADER": "Bot Reports",
