--- a/app/javascript/dashboard/i18n/locale/en/settings.json
+++ b/app/javascript/dashboard/i18n/locale/en/settings.json
@@ -291,6 +291,7 @@
     "CSAT": "CSAT",
     "LIVE_CHAT": "Live Chat",
     "WHATSAPP": "WhatsApp",
+    "CAMPAIGN": "Campaign",
     "SMS": "SMS",
     "CAMPAIGNS": "Campaigns",
     "ONGOING": "Ongoing",
