--- a/app/javascript/dashboard/i18n/locale/en/report.json
+++ b/app/javascript/dashboard/i18n/locale/en/report.json
@@ -427,7 +427,8 @@
     "HEADER": "Campaign Reports",
     "FILTER_DROPDOWN_LABEL": "Select campaign",
     "EMPTY_TITLE": "No campaign report selected",
-    "EMPTY_SUBTITLE": "Please select a campaign"
+    "EMPTY_SUBTITLE": "Please select a campaign",
+    "DOWNLOAD_REPORTS": "Download reports"
   },
   "BOT_REPORTS": {
     "HEADER": "Bot Reports",
