--- a/app/javascript/dashboard/i18n/locale/en/report.json
+++ b/app/javascript/dashboard/i18n/locale/en/report.json
@@ -425,6 +425,8 @@
   },
   "CAMPAIGN_REPORTS": {
     "HEADER": "Campaign Reports",
+    "CHANNEL_FILTER_DROPDOWN_LABEL": "Select channel",
+    "INBOX_FILTER_DROPDOWN_LABEL": "Select inbox",
     "FILTER_DROPDOWN_LABEL": "Select campaign",
     "EMPTY_TITLE": "No campaign report selected",
     "EMPTY_SUBTITLE": "Please select a campaign",
