Cancellation and refund flow improvements

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -348,4 +348,5 @@ en:
       %{format_messages}
   shopify:
     order_cancellation_process: 'Order cancellation in process'
-    order_cancellation_done: 'Order cancellation completed'
+    order:
+      update_complete: 'Order updated'
