Email otp verification

--- a/app/javascript/widget/i18n/locale/en.json
+++ b/app/javascript/widget/i18n/locale/en.json
@@ -53,7 +53,10 @@
   },
   "POWERED_BY": "Powered by OneHash Chat",
   "EMAIL_PLACEHOLDER": "Please enter your email",
+  "OTP_PLACEHOLDER": "Please enter the otp",
   "VERIFY_EMAIL": "Verify",
+  "VERIFY_OTP": "Verify",
+  "SEND_OTP": "Send otp",
   "CHAT_PLACEHOLDER": "Type your message",
   "TODAY": "Today",
   "YESTERDAY": "Yesterday",
