--- a/app/javascript/widget/i18n/locale/en.json
+++ b/app/javascript/widget/i18n/locale/en.json
@@ -57,10 +57,26 @@
     "LABEL": "Chat with us"
   },
   "POWERED_BY": "Powered by OneHash Chat",
+
+  "EMAIL": "Email",
   "EMAIL_PLACEHOLDER": "Please enter your email",
-  "OTP_PLACEHOLDER": "Please enter the otp",
+  "EMAIL_ERROR": "Please enter a valid email",
+
+  "ORDER_ID": "Order Id",
+  "ORDER_ID_PLACEHOLDER": "Please enter the order id",
+  "ORDER_ID_ERROR": "Please enter a valid order id",
+
+  "PHONE": "Phone number",
+  "PHONE_PLACEHOLDER": "Please enter your phone",
+  "PHONE_ERROR": "Please enter a valid phone number",
+
+  "ORDER_NOT_FOUND": "Order not found",
+
+
   "VERIFY_EMAIL": "Verify",
   "VERIFY_OTP": "Verify",
+  "TRACK_ORDER": "Track order",
+  "TRACKING_INFO": "Tracking info",
   "SEND_OTP": "Send otp",
   "CHAT_PLACEHOLDER": "Type your message",
   "TODAY": "Today",
@@ -129,7 +145,8 @@
     "VIEW_ALL_ARTICLES": "View all articles",
     "IFRAME_LOAD_ERROR": "There was an error loading the article, please refresh the page and try again."
   },
-  "SHOPIFY_LOGIN": "Shopify Login",
+  "ORDER_TRACKING": "Order tracking",
+  "ORDER_TRACKING_DESC": "Track order with your order id",
   "SHOPIFY_ORDERS": {
     "TITLE": "Shopify Orders",
     "VIEW_ALL_ORDERS": "View all",
