--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -353,3 +353,4 @@ en:
       update_complete: 'Order updated'
     multi_store_not_supported: Your OneHash Chat account already contains an app, please remove the existing app before integrating new one, or log out of the current account.
     shop_domain_required: 'Shop domain is required'
+    data_not_found: 'Data not found'
