--- a/config/locales/no.yml
+++ b/config/locales/no.yml
@@ -19,7 +19,7 @@
 "no":
   hello: 'Hallo, verden'
   messages:
-    reset_password_success: Woot! Forespørsel om tilbakestilling av passord er vellykket. Sjekk innboksen for instruksjoner.
+    reset_password_success: Forespørsel om tilbakestilling av passord er vellykket. Sjekk innboksen for instruksjoner.
     reset_password_failure: Uff da! Vi fant ingen bruker med den angitte eposten.
     inbox_deletetion_response: Innboksen din slettingsforespørsel vil bli behandlet i løpet av en periode.
   errors:
